# simple-poetry

./: .devcontainer.json  .gitignore  404.html  Dockerfile  README.md  index.html  index.md  mkdocs.yaml  objects.inv  pyproject.toml  setup.py  sitemap.xml
.github/workflows/: build.yaml  on_push.yaml  on_release.yaml  push.yaml  release.yaml
all/: index.html
conda-recipe/: meta.yaml
docs/: all.md  setup.md
search/: search_index.json
simple_poetry/: __init__.py
simple_pypackage/: __init__.py
tests/: test_version.py
